--- a/package.json
+++ b/package.json
@@ -9,15 +9,38 @@
   "categories": [
     "Other"
   ],
-  "activationEvents": [],
+  "activationEvents": [
+    "onCommand:swagger2openapi.generate"
+  ],
   "main": "./dist/extension.js",
   "contributes": {
     "commands": [
       {
-        "command": "swagger2openapi.helloWorld",
-        "title": "Hello World"
+        "command": "swagger2openapi.generate",
+        "title": "Swagger2OpenAPI: Generate"
       }
-    ]
+    ],
+    "configuration": {
+      "type": "object",
+      "title": "Swagger2OpenAPI Configuration",
+      "properties": {
+        "swagger2openapi.swaggerJsonUrl": {
+          "type": "string",
+          "default": "",
+          "description": "The URL of the Swagger JSON file."
+        },
+        "swagger2openapi.outputPathAndFileName": {
+          "type": "string",
+          "default": "./swagger.json",
+          "description": "The full path and file name to save the Swagger JSON content."
+        },
+        "swagger2openapi.npmCommand": {
+          "type": "string",
+          "default": "npm run openapi",
+          "description": "The npm command to run after generating the OpenAPI file."
+        }
+      }
+    }
   },
   "scripts": {
     "vscode:prepublish": "npm run package",
