add description and keywords

--- a/package.json
+++ b/package.json
@@ -1,11 +1,38 @@
 {
   "name": "swagger2openapi",
   "displayName": "swagger2openapi",
-  "description": "testdesc",
+  "description": "Swagger2OpenAPI is a powerful Visual Studio Code extension designed to streamline the process of converting Swagger JSON files to OpenAPI (formerly known as Swagger) specifications. ",
   "version": "0.0.1",
+  "publisher": "dumildematos",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/dumildematos/swagger2openapi"
+  },
   "engines": {
     "vscode": "^1.89.0"
   },
+  "keywords": [
+    "Swagger",
+    "OpenAPI",
+    "Visual Studio Code",
+    "Extension",
+    "API",
+    "JSON",
+    "Conversion",
+    "Generation",
+    "Integration",
+    "Workflow",
+    "Development",
+    "Automation",
+    "Configuration",
+    "Settings",
+    "NPM Command",
+    "Productivity",
+    "Efficiency",
+    "Seamless",
+    "Streamline",
+    "Workspace"
+  ],
   "categories": [
     "Other"
   ],
